Adds import from github features for marketplace versions
